fix: change server url for vault

--- a/charts/applications/monitoring/templates/vault-secretstore.yaml
+++ b/charts/applications/monitoring/templates/vault-secretstore.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.lab1830.com"
+      server: "http://vault-production-ui.vault.svc.cluster.local:8200"
       version: "v2"
       auth:
         kubernetes:
