--- a/charts/infrastructure/rbac-security/values.yaml
+++ b/charts/infrastructure/rbac-security/values.yaml
@@ -51,3 +51,27 @@ roles:
   developer:
     namespace: applications
     rules:
+      - apiGroups: [""]
+        resources: ["pods", "services", "configmaps", "persistentvolumeclaims"]
+        verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+      - apiGroups: ["apps"]
+        resources: ["deployments", "replicasets"]
+        verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+      - apiGroups: [""]
+        resources: ["secrets"]
+        verbs: ["get", "list", "watch"]
+
+# ClusterRoleBindings
+clusterRoleBindings:
+  - name: monitoring-reader-binding
+    clusterRole: monitoring-reader
+    serviceAccount: monitoring-reader
+    namespace: monitoring-production
+  - name: backup-operator-binding
+    clusterRole: velero-backup-operator
+    serviceAccount: backup-operator
+    namespace: velero
+  - name: network-security-manager-binding
+    clusterRole: network-security-manager
+    serviceAccount: security-manager
+    namespace: security
