refactor: complete vault removal from staging and production
- Remove External Secrets Operator applications (no longer needed)
- Disable vault in wiz configurations for both environments
- Remove vault network policies and namespace references
- Clean up vault RBAC service accounts and bindings
- Delete temporary vault troubleshooting files

--- a/argocd/apps/production/network-security.yaml
+++ b/argocd/apps/production/network-security.yaml
@@ -26,10 +26,8 @@ spec:
           lokiPort: 31000
           clusterCIDR: "192.168.4.0/22"
         
-        # Enable all network policies for production
+        # Enable network policies for production (vault removed)
         networkPolicies:
-          vault:
-            enabled: true
           monitoring:
             enabled: true
           network:
@@ -38,9 +36,11 @@ spec:
             enabled: true
           applications:
             enabled: true
+  
   destination:
     server: https://kubernetes.default.svc
     namespace: security
+  
   syncPolicy:
     automated:
       prune: false
