--- a/argocd/apps/staging/pod-security.yaml
+++ b/argocd/apps/staging/pod-security.yaml
@@ -22,15 +22,11 @@ spec:
         # Staging-specific configuration (more lenient)
         defaultEnforcementLevel: baseline
         
-        # Only apply to staging namespaces
+        # Only apply to staging namespaces (vault-staging removed)
         namespaces:
           infrastructure:
             - name: monitoring-staging
               enforce: privileged
-              audit: baseline
-              warn: baseline
-            - name: vault-staging
-              enforce: baseline
               audit: baseline
               warn: baseline
           applications:
@@ -38,9 +34,11 @@ spec:
               enforce: baseline
               audit: restricted
               warn: restricted
+  
   destination:
     server: https://kubernetes.default.svc
     namespace: security
+  
   syncPolicy:
     automated:
       prune: false
