fix: add missing wiz-kubernetes-integration config for production

--- a/argocd/apps/production/wiz.yaml
+++ b/argocd/apps/production/wiz.yaml
@@ -22,6 +22,11 @@ spec:
           enabled: false  # Vault removed from infrastructure
         
         wiz-kubernetes-integration:
+          global:
+            wizApiToken:
+              secret:
+                create: false
+                name: wiz-api-token # Manual secret creation
         
         wiz-kubernetes-connector:
           autoCreateConnector:
