--- a/argocd/apps/production/monitoring.yaml
+++ b/argocd/apps/production/monitoring.yaml
@@ -4,7 +4,7 @@ metadata:
   name: monitoring-production
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argocd.argroj.io
 spec:
   project: default
   source:
@@ -13,8 +13,7 @@ spec:
     path: charts/applications/monitoring
     helm:
       values: |
-        grafanaSmtp:
-          enabled: true
+        # The conflicting 'grafanaSmtp' block has been removed.
         kube-prometheus-stack:
           grafana:
             ingress:
@@ -35,15 +34,24 @@ spec:
             initChownData:
               enabled: false
             env:
+              # Static SMTP settings
               GF_SMTP_ENABLED: "true"
               GF_SMTP_HOST: "smtp.gmail.com:587"
               GF_SMTP_FROM_ADDRESS: "grafana@lab1830.com"
               GF_SMTP_FROM_NAME: "Lab1830 Grafana Alerts"
-              GF_SMTP_SKIP_VERIFY: "false"
               GF_SMTP_STARTTLS_POLICY: "MandatoryStartTLS"
-            envFrom:
-              - secretRef:
-                  name: grafana-smtp-secret
+              
+              # Securely load credentials from the secret
+              GF_SMTP_USER:
+                valueFrom:
+                  secretKeyRef:
+                    name: grafana-smtp-secret
+                    key: GF_SMTP_USER
+              GF_SMTP_PASSWORD:
+                valueFrom:
+                  secretKeyRef:
+                    name: grafana-smtp-secret
+                    key: GF_SMTP_PASSWORD
             grafana.ini:
               server:
                 root_url: "https://grafana.lab1830.com"
