--- a/argocd/apps/production/monitoring.yaml
+++ b/argocd/apps/production/monitoring.yaml
@@ -37,7 +37,7 @@ spec:
               # Static SMTP settings
               GF_SMTP_ENABLED: "true"
               GF_SMTP_HOST: "smtp.gmail.com:587"
-              GF_SMTP_FROM_ADDRESS: "grafana@lab1830.com"
+              GF_SMTP_FROM_ADDRESS: "blehnen@gmail.com"
               GF_SMTP_FROM_NAME: "Lab1830 Grafana Alerts"
               GF_SMTP_STARTTLS_POLICY: "MandatoryStartTLS"
               
