fix(monitoring): add Prometheus scraping ports to network policy
- Allow Prometheus to scrape node-exporter, kube-state-metrics, CoreDNS, kubelet, Velero
- Fix missing metrics in Grafana dashboards caused by blocked scraping
- Enable full monitoring stack functionality

--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -66,3 +66,17 @@ networkPolicies:
         policyTypes:
           - Ingress
           - Egress
+
+          # Allow Prometheus to scrape all targets
+          - to: []
+            ports:
+              - protocol: TCP
+                port: 9100  # node-exporter
+              - protocol: TCP
+                port: 8080  # kube-state-metrics
+              - protocol: TCP
+                port: 9153  # coredns
+              - protocol: TCP
+                port: 10250 # kubelet
+              - protocol: TCP
+                port: 8085  # velero
