--- a/charts/infrastructure/network-security/values.yaml
+++ b/charts/infrastructure/network-security/values.yaml
@@ -57,6 +57,20 @@ networkPolicies:
                 port: 587
               - protocol: TCP
                 port: 465
+          - to: []
+            ports:
+              - protocol: TCP
+                port: 9100  # node-exporter
+              - protocol: TCP
+                port: 8080  # kube-state-metrics, alertmanager config-reloader
+              - protocol: TCP
+                port: 9153  # coredns
+              - protocol: TCP
+                port: 10250 # kubelet
+              - protocol: TCP
+                port: 8085  # velero
+              - protocol: TCP
+                port: 9093  # alertmanager
   applications:
     namespace: applications
     enabled: true
@@ -66,17 +80,3 @@ networkPolicies:
         policyTypes:
           - Ingress
           - Egress
-
-          # Allow Prometheus to scrape all targets
-          - to: []
-            ports:
-              - protocol: TCP
-                port: 9100  # node-exporter
-              - protocol: TCP
-                port: 8080  # kube-state-metrics
-              - protocol: TCP
-                port: 9153  # coredns
-              - protocol: TCP
-                port: 10250 # kubelet
-              - protocol: TCP
-                port: 8085  # velero
