fix(staging): remove SMTP secret dependencies completely
- Remove envFrom and env references to grafana-smtp-secret
- Ensure staging monitoring doesn't depend on production secrets
- Fix namespace mismatch causing SealedSecret decrypt errors

--- a/argocd/apps/staging/monitoring.yaml
+++ b/argocd/apps/staging/monitoring.yaml
@@ -24,6 +24,9 @@ spec:
               size: 5Gi
             initChownData:
               enabled: false
+            # Remove any SMTP environment references
+            env: {}
+            envFrom: []
           prometheus:
             prometheusSpec:
               retention: 7d
