chore: sanitize repository for public release
- Remove wireguard application (unused)
- Replace internal IP addresses with placeholders
- Sanitize vault setup script credentials
- Update README to reflect current structure

--- a/argocd/apps/production/velero.yaml
+++ b/argocd/apps/production/velero.yaml
@@ -16,7 +16,7 @@ spec:
         # Production-specific values
         nfsGateway:
           nfs:
-            server: "192.168.4.159"
+            server: "192.168.x.159"
             path: "/volume1/Backups/production"
           resources:
             requests:
