--- a/argocd/apps/staging/velero.yaml
+++ b/argocd/apps/staging/velero.yaml
@@ -19,7 +19,7 @@ spec:
         # Staging-specific values
         nfsGateway:
           nfs:
-            server: "192.168.4.159"
+            server: "192.168.x.159"
             path: "/volume1/Backups/staging"
         
         velero:
