--- a/argocd/apps/staging/authentik.yaml
+++ b/argocd/apps/staging/authentik.yaml
@@ -30,6 +30,11 @@ spec:
             password: "staging-postgres-password-change"
           image:
             tag: latest
+          primary:
+            podSecurityContext:
+              fsGroup: 0
+            containerSecurityContext:
+              runAsUser: 0
         
         redis:
           auth:
