--- a/argocd/apps/staging/authentik.yaml
+++ b/argocd/apps/staging/authentik.yaml
@@ -33,10 +33,8 @@ spec:
           primary:
             podSecurityContext:
               fsGroup: 1001
-            containerSecurityContext:
-              runAsUser: 1001
           volumePermissions:
-            enabled: true
+            enabled: false
         
         redis:
           auth:
